--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,11 +6,7 @@ jobs:
 
     steps:
       - checkout
-
+      - setup_remote_docker
       - run:
-          name: Greeting
-          command: echo Hello, world.
-
-      - run:
-          name: Print the Current Time
-          command: date
+          name: Build Dockerfile
+          command: docker build -t kenmu/anaredmine:latest .
